--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
           python-version: '3.11'
 
       - name: install dependencies
-        run: python3 -m pip install -r requirements.txt
+        run: |
+          apt-get install -y libgl1-mesa-glx
+          python3 -m pip install -r requirements.txt
 
       - name: test
         env:
