--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: install dependencies
         run: |
-          apt-get install -y libgl1-mesa-glx
+          sudo apt-get install -y libgl1-mesa-glx
           python3 -m pip install -r requirements.txt
 
       - name: test
