--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,16 @@ jobs:
         run: |
           sudo apt-get update
           # sudo apt-get install -y libgl1-mesa-glx
-          sudo apt-get install -y '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev
+          # sudo apt-get install -y '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev
+          sudo apt-get install xvfb
           python3 -m pip install -r requirements.txt
 
       - name: test
         env:
           TEST: true
           QT_QPA_PLATFORM: offscreen
-        run: python main.py
+        # run: python main.py
+        run: xvfb-run python main.py
 
       - name: pre-commit
         run: pre-commit run --all-files
