--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,12 @@ jobs:
 
       - name: Install EGL mesa
         run: |
-          sudo apt-get update -y -qq
-          sudo apt-get install -y -qq libegl1-mesa libegl1-mesa-dev        
-      - name: Check if EGL library exists
-        run: ldconfig -p | grep EGL
+          # sudo apt-get update -y -qq
+          # sudo apt-get install -y -qq libegl1-mesa libegl1-mesa-dev    
+          sudo apt-get update -y
+          sudo apt-get install -y libgles2-mesa-dev    
+      # - name: Check if EGL library exists
+        # run: ldconfig -p | grep EGL
 
       # - name: install dependencies
       #   run: |
