--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
       # https://pytest-qt.readthedocs.io/en/latest/troubleshooting.html#github-actions
       - uses: tlambert03/setup-qt-libs@v1
 
+      - name: Install xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb herbstluftwm
+
+
 
       # - name: Install EGL mesa
       #   run: |
