--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: '3.11'
       
       # https://pytest-qt.readthedocs.io/en/latest/troubleshooting.html#github-actions
-      # - uses: tlambert03/setup-qt-libs@v1
+      - uses: tlambert03/setup-qt-libs@v1
 
       - name: Install xvfb
         run: |
