--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Install xvfb
         run: |
           sudo apt-get update
-          sudo apt-get install -y xvfb herbstluftwm
+          # sudo apt-get install -y xvfb herbstluftwm
+          sudo apt-get install -y xvfb
 
       - name: install python dependencies
         run: |
